// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createBabelArgs cjs only 1`] = `
[
  [
    "--package",
    "@babel/core",
    "--package",
    "@babel/cli",
    "babel",
    "--config-file",
    "../../config/babel.config.js",
    "--extensions",
    ".ts,.js,.tsx,.jsx,.cjs,.mjs",
    "--ignore",
    "**/*.spec.js",
    "--env-name",
    "cjs",
    "-d",
    "cjsDir",
    "sourceDir",
  ],
]
`;

exports[`createBabelArgs esm only 1`] = `
[
  [
    "--package",
    "@babel/core",
    "--package",
    "@babel/cli",
    "babel",
    "--config-file",
    "../../config/babel.config.js",
    "--extensions",
    ".ts,.js,.tsx,.jsx,.cjs,.mjs",
    "--ignore",
    "**/*.spec.js",
    "--env-name",
    "es",
    "-d",
    "esDir",
    "sourceDir",
  ],
]
`;

exports[`createBabelArgs minimal args 1`] = `
[
  [
    "--package",
    "@babel/core",
    "--package",
    "@babel/cli",
    "babel",
    "--config-file",
    "../../config/babel.config.js",
    "--extensions",
    ".ts,.js,.tsx,.jsx,.cjs,.mjs",
    "--ignore",
    "**/*.spec.js",
    "--env-name",
    "es",
    "-d",
    "esDir",
    "sourceDir",
  ],
  [
    "--package",
    "@babel/core",
    "--package",
    "@babel/cli",
    "babel",
    "--config-file",
    "../../config/babel.config.js",
    "--extensions",
    ".ts,.js,.tsx,.jsx,.cjs,.mjs",
    "--ignore",
    "**/*.spec.js",
    "--env-name",
    "cjs",
    "-d",
    "cjsDir",
    "sourceDir",
  ],
]
`;

exports[`createBabelArgs with watch 1`] = `
[
  [
    "--package",
    "@babel/core",
    "--package",
    "@babel/cli",
    "babel",
    "--config-file",
    "../../config/babel.config.js",
    "--extensions",
    ".ts,.js,.tsx,.jsx,.cjs,.mjs",
    "--ignore",
    "**/*.spec.js",
    "--env-name",
    "es",
    "-d",
    "esDir",
    "--watch",
    "sourceDir",
  ],
]
`;
